# gaze-tracker

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: STATUS.md
notebooks/: 03_pipeline_demo.ipynb
scripts/: _build_pipeline_notebook.py
src/dashcam_sign_detector/classifier/: README.md  config.py  dataset.py  evaluate.py  train.py
src/dashcam_sign_detector/detector/: __init__.py  detect.py
src/dashcam_sign_detector/pipeline/: __init__.py  pipeline.py
src/gaze_tracker/: __init__.py  __main__.py  _display.py  calibration.py  evaluate.py  filter.py  landmarks.py  mapping.py  snap.py  stream.py
tests/: test_calibration.py  test_evaluate.py  test_filter.py  test_landmarks.py  test_mapping.py  test_pipeline.py  test_snap.py
