[project]
name = "gaze-tracker"
version = "0.1.0"
description = "Laptop webcam gaze-to-screen tracker: MediaPipe Face Mesh iris landmarks + 9-point polynomial calibration + One Euro smoothing."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { file = "LICENSE" }
authors = [{ name = "Riley Oest" }]

dependencies = [
    "mediapipe>=0.10",
    "numpy>=1.24",
    "opencv-python>=4.8",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.7",
]

[project.scripts]
gaze-tracker = "gaze_tracker.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gaze_tracker"]

[tool.uv]
# Auto-download the Python interpreter pinned in .python-version on `uv sync`.
# Without this, a fresh machine hits "Python downloads are set to 'manual'".
python-downloads = "automatic"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
